# temp-storage-repro

./: Cargo.toml  README.md
src/: contract.rs  lib.rs  storage.rs  test.rs
test_snapshots/test/: test_temp_storage.1.json
